force-app/zurich-base/main/default/objects/AccountRelationship__c/AccountRelationship__c.object-meta.xml
<CustomObject>
    <label>Cuenta Relacionada</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cuentas Relacionadas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>