force-app/zurich-base/main/default/objects/AccountRelationship__c/fields/IntermediaryId__c.field-meta.xml
<CustomField>
    <fullName>IntermediaryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifica el intermediario</description>
    <label>Intermediary</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas Relacionadas (Intermediary)</relationshipLabel>
    <relationshipName>Cuentas_Relacionadas</relationshipName>
    <type>Lookup</type>
</CustomField>