force-app/zurich-base/main/default/objects/AccountRelationship__c/fields/RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts Relationships (Related Account)</relationshipLabel>
    <relationshipName>Accounts_Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>