force-app/zurich-base/main/default/objects/AccountRelationship__c/fields/RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>RelationshipType__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1er grado familiar</fullName>
            </value>
            <value>
                <fullName>2º grado familiar</fullName>
            </value>
            <value>
                <fullName>Relación laboral</fullName>
            </value>
            <value>
                <fullName>Relación amistad</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>